Info about header photo in footer

--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						Vytvořil Jindřich Samec dle <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a>
+						Vytvořil Jindřich Samec dle <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a><br>
+						Foto z <a href="https://www.google.cz/maps/place/Mirissa+Beach,+Mirissa,+%C5%A0r%C3%AD+Lanka/@5.9435367,80.458728,18z/data=!3m1!4b1!4m2!3m1!1s0x3ae13fd4c636d5ff:0xb81456b9b41a93b2">Mirissa Beach SriLanka</a>
 					</div>
 				</div>
 			</div>
