--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 	</script>
 </head>
 
-<body id="page-top" class="index">
+<body id="page-top" class="index" ng-app="xjs">
 
  <!-- Navigation -->
 		<nav class="navbar navbar-default navbar-fixed-top">
@@ -68,7 +68,7 @@
 		</nav>
 
 	<!-- Header -->
-	<header>
+	<header ib="ib" client-id="43db9e5b17154941aded3b288b547295" user-id="472500159">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -172,7 +172,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						Vytvořil Jindřich Samec dle <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a><br>
-						Foto z <a href="https://www.google.cz/maps/place/Mirissa+Beach,+Mirissa,+%C5%A0r%C3%AD+Lanka/@5.9435367,80.458728,18z/data=!3m1!4b1!4m2!3m1!1s0x3ae13fd4c636d5ff:0xb81456b9b41a93b2">Mirissa Beach SriLanka</a>
+						Foto z <a href="https://instagram.com/jindrichsamec">instagram.com/jindrichsamec</a>
 					</div>
 				</div>
 			</div>
@@ -189,6 +189,9 @@
 	<!-- jQuery -->
 	<script src="js/jquery.js"></script>
 
+	<!-- AngularJS -->
+	<script src="js/angular.min.js"></script>
+
 	<!-- Bootstrap Core JavaScript -->
 	<script src="js/bootstrap.min.js"></script>
 
@@ -203,6 +206,7 @@
 
 	<!-- Custom Theme JavaScript -->
 	<script src="js/freelancer.js"></script>
+	<script src="js/instagram-background.js"></script>
 
 </body>
 
