Header background as transition between images

--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
 
 	<!-- Custom Theme JavaScript -->
 	<script src="js/freelancer.js"></script>
-	<script src="js/instagram-background.js"></script>
+	<script src="js/instagram-background.js?v=1"></script>
 
 </body>
 
