New version instagram background with fallback

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 		</nav>
 
 	<!-- Header -->
-	<header ib="ib" client-id="43db9e5b17154941aded3b288b547295" user-id="472500159">
+	<header ib="ib" client-id="43db9e5b17154941aded3b288b547295" user-id="472500159" fallback="/img/background.jpg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
