BrandEmbassy logo was added

--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,11 @@
 					<div class="footer-col col-md-4">
 						<h3>Pracuji pro</h3>
 						<p>
+							<a href="http://www.brandembassy.com/">
+								<img src="https://www.startupjobs.cz/upload/logos/Logo-black.png" />
+							</a>
+						</p>
+						<p>
 							<a href="http://www.medio.cz/">
 								<img src="http://www.medio.cz/gfx/logo.png" />
 							</a>
