fixed links protocol

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 
 	<!-- Custom Fonts -->
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+	<link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+	<link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -135,37 +135,37 @@
 						<h3>Já na webu</h3>
 						<ul class="list-inline">
 							<li>
-								<a href="https://www.facebook.com/jindrich.samec" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+								<a href="//www.facebook.com/jindrich.samec" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
 							</li>
 							<li>
-								<a href="https://instagram.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+								<a href="//instagram.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
 							</li>
 							<li>
-								<a href="http://www.last.fm/user/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-lastfm"></i></a>
+								<a href="//www.last.fm/user/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-lastfm"></i></a>
 							</li>
 						</ul>
 						<ul class="list-inline">
 							<li>
-								<a href="https://twitter.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+								<a href="//twitter.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
 							</li>
 							<li>
-								<a href="https://cz.linkedin.com/pub/jindřich-samec/53/418/72a/cs" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+								<a href="//cz.linkedin.com/pub/jindřich-samec/53/418/72a/cs" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
 							</li>
 							<li>
-								<a href="https://github.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+								<a href="//github.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
 							</li>
 						</ul>
 					</div>
 					<div class="footer-col col-md-4">
 						<h3>Pracuji pro</h3>
 						<p>
-							<a href="http://www.brandembassy.com/">
-								<img src="https://www.startupjobs.cz/upload/logos/Logo-black.png" />
+							<a href="//www.brandembassy.com/">
+								<img src="//www.startupjobs.cz/upload/logos/Logo-black.png" />
 							</a>
 						</p>
 						<p>
-							<a href="http://www.medio.cz/">
-								<img src="http://www.medio.cz/gfx/logo.png" />
+							<a href="//www.medio.cz/">
+								<img src="//www.medio.cz/gfx/logo.png" />
 							</a>
 						</p>
 					</div>
@@ -176,8 +176,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						Vytvořil Jindřich Samec dle <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a><br>
-						Foto z <a href="https://instagram.com/jindrichsamec">instagram.com/jindrichsamec</a>
+						Vytvořil Jindřich Samec dle <a href="//startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a><br>
+						Foto z <a href="//instagram.com/jindrichsamec">instagram.com/jindrichsamec</a>
 					</div>
 				</div>
 			</div>
@@ -201,7 +201,7 @@
 	<script src="js/bootstrap.min.js"></script>
 
 	<!-- Plugin JavaScript -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/cbpAnimatedHeader.js"></script>
 
