--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
 	<meta name="description" content="PHP && JavaScript developer">
 	<link type="text/plain" rel="author" href="humans.txt" />
 
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/manifest.json">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="theme-color" content="#ffffff">
+
 	<title>Jindřich Samec</title>
 
 	<!-- Custom CSS -->
