--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Jindřich Samec">
-	<meta name="description" content="PHP && JavaScript developer">
+	<meta name="description" content="Software developer">
 	<link type="text/plain" rel="author" href="humans.txt" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -75,7 +75,7 @@
 		</nav>
 
 	<!-- Header -->
-	<header ib="ib" client-id="43db9e5b17154941aded3b288b547295" user-id="472500159" fallback="/img/background.jpg">
+	<header>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -83,7 +83,7 @@
 					<div class="intro-text">
 						<span class="name">Jindřich Samec</span>
 						<hr class="star-light">
-						<span class="skills">PHP && JavaScript developer</span>
+						<span class="skills">Software developer</span>
 					</div>
 				</div>
 			</div>
@@ -130,61 +130,11 @@
 
 	<!-- Footer -->
 	<footer class="text-center">
-		<div class="footer-above">
-			<div class="container">
-				<div class="row">
-					<div class="footer-col col-md-4">
-						<h3>Zavolejte</h3>
-						<p><i class="fa fa-fw fa-phone"></i> 721 286 634</p>
-						<p><i class="fa fa-fw fa-skype"></i> <a href="callto:jindrich.samec">jindrich.samec</a></p>
-					</div>
-					<div class="footer-col col-md-4">
-						<h3>Já na webu</h3>
-						<ul class="list-inline">
-							<li>
-								<a href="//www.facebook.com/jindrich.samec" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-							</li>
-							<li>
-								<a href="//instagram.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-							</li>
-							<li>
-								<a href="//www.last.fm/user/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-lastfm"></i></a>
-							</li>
-						</ul>
-						<ul class="list-inline">
-							<li>
-								<a href="//twitter.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-							</li>
-							<li>
-								<a href="//cz.linkedin.com/pub/jindřich-samec/53/418/72a/cs" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-							</li>
-							<li>
-								<a href="//github.com/jindrichsamec" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
-							</li>
-						</ul>
-					</div>
-					<div class="footer-col col-md-4">
-						<h3>Pracuji pro</h3>
-						<p>
-							<a href="//www.brandembassy.com/">
-								<img src="//www.startupjobs.cz/upload/logos/Logo-black.png" />
-							</a>
-						</p>
-						<p>
-							<a href="//www.medio.cz/">
-								<img src="//www.medio.cz/gfx/logo.png" />
-							</a>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="footer-below">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
 						Vytvořil Jindřich Samec dle <a href="//startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a><br>
-						Foto z <a href="//instagram.com/jindrichsamec">instagram.com/jindrichsamec</a>
 					</div>
 				</div>
 			</div>
